src/styles/btn.scss
@use 'sass:map';
@use './util/colors' as *;

$bg-left: '../assets/btn-left.svg';
$bg-right: '../assets/btn-right.svg';
$bg-middle: '../assets/btn-middle.svg';

$btn-variant: (
  "primary": getColor("blue"),
  "secondary": getColor("pink"),
  "tertiary": getColor("yellow"),
);

$btn-variant-hover: (
  "primary": getColor("blue-dark"),
  "secondary": #FA6EB8,
  "tertiary": #FFBE0C,
);


.btn {
  padding: 0 27px;
  cursor: pointer;
  align-items: center;
  position: relative;
  box-sizing: border-box;
  justify-content: stretch;
  font-size: 1rem;
  letter-spacing: 0.015rem;

  &.btn,
  &.btn--small {
    background-color: transparent;
  }

  &.btn--small {
    padding: 23px 25px 22px;

    &::before,
    &::after {
      width: 20px;
    }
  }

  &::before,
  &::after {
    content: '';
    position: absolute;
    top: 0;
    height: 100%;
    z-index: 1;
    width: 27px;
    background-size: 100% 100%;
    background-repeat: no-repeat;
    background-color: transparent;
    background-position: center;
  }

  &::before {
    left: 0;
    background-position: left center;
  }

  &::after {
    right: 0;
    background-position: right center;
  }

  &-bg {
    position: absolute;
    display: block;
    left: 27px;
    right: 27px;
    height: 100%;
    z-index: 2;
    background-size: 100% 100%;
    background-repeat: repeat-x;
    background-color: transparent;
    background-position: center;

    .btn--small & {
      left: 20px;
      right: 20px;
    }
  }

  &-wrap {
    width: 100%;
    padding: 17px 0px;
    position: relative;
    z-index: 2;
    display: flex;
    align-items: center;
    justify-content: center;
    flex: 1;
    white-space: nowrap;
    margin-left: -5px;
    margin-right: -5px;
  }


  // apply the background images to the button based on the variant
  @each $name, $value in $btn-variant {
    &.btn--#{$name},
    &[data-wf--btn-small--variant="#{$name}"],
    &[data-wf--btn--variant="#{$name}"] {
      &::before {
        background-image: svg-load($bg-left, fill=$value);
      }
      &::after {
        background-image: svg-load($bg-right, fill=$value);
      }
      .btn-bg {
        background-image: svg-load($bg-middle, fill=$value);
      }
    }
  }

  @each $name, $value in $btn-variant-hover {
    @media (hover: hover) {
      &.btn--#{$name},
      &[data-wf--btn-small--variant="#{$name}"],
      &[data-wf--btn--variant="#{$name}"] {
        &:hover,
        &:focus {
          background-color: transparent;
          &::before {
            background-image: svg-load($bg-left, fill=$value);
          }
          &::after {
            background-image: svg-load($bg-right, fill=$value);
          }
          .btn-bg {
            background-image: svg-load($bg-middle, fill=$value);
          }
        }

      }
    }
  }
}

